--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Здесь должны быть три тега c сервиса Google fonts для подключения шрифтов  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>It-incubator precourse</title>
 </head>
@@ -76,9 +79,9 @@
 
         <table data-cy="hw2-about-table-pre" border="1">
             <tr>
-                <th>п/п</th>
-                <th>Наименование</th>
-                <th>Количество</th>
+                <th class="tt-1">п/п</th>
+                <th class="tt-2">Наименование</th>
+                <th class="tt-3">Количество</th>
             </tr>
             <tr>
                 <td>1</td>
